--- a/css/styles.css
+++ b/css/styles.css
@@ -91,11 +91,28 @@ button {
     letter-spacing: 0.02em;
     padding: 24px 0;
     display: inline-block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-menu-link:hover,
 .header-menu-link:focus {
     color: #404BBF; 
+}
+
+.current {
+position: relative;
+color: #404BBF; 
+}
+
+.current::after {
+    content: "";
+    border-radius: 2px;
+    background: #404BBF;
+    height: 4px;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
 }
 
 .contacts-list {
@@ -111,6 +128,7 @@ button {
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-list-item {
@@ -128,8 +146,11 @@ address {font-style: normal;}
 .hero {
     padding: 188px 0;
     background-color: #2e2f42;
+    background-image: linear-gradient(#2E2F42B2, #2E2F42B2),
+    url(../images/people-office\ 1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-
 
 .hero-title {
     color: #FFF;
@@ -196,6 +217,15 @@ address {font-style: normal;}
     gap: 24px;
 }
 
+.icon-background {
+    padding: 24px 100px;
+    background-color: #F4F4FD;
+    border-radius: 4px;
+    border: 1px solid var(--LIGHT-SLATE, #8E8F99);
+    margin-bottom: 8px;
+
+}
+
 .features-list-item {
     width: calc((100% - 72px) / 4);
 }
@@ -247,17 +277,56 @@ address {font-style: normal;}
 .team-img {
     background-color: #FFF;
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
+
+
 
 .team-member-info {
     padding: 32px 0;
     text-align: center;
+    transition-duration: 200ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.team-member-info:hover {
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .position {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+}
+
+.socials-list {
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+}
+
+.socials-list-item {
+    width: 40px;
+    height: 40px;
+    margin-top: 8px;
+}
+
+.team-icon-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #4D5AE5;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-icon-link:hover,
+.team-icon-link:focus {
+    background-color: #404BBF;
 }
 
 .portfolio {
@@ -281,6 +350,35 @@ address {font-style: normal;}
     letter-spacing: 0.02em;
     text-transform: capitalize;
     margin-bottom: 72px;
+}
+
+
+.portfolio-text-wrap {
+    position: absolute;
+    top: 0;
+    background: #4D5AE5;
+    height: 100%;
+    padding-top: 40px;
+    padding-right: 32px;
+    padding-left: 32px;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-cover-wrap {
+position: relative;
+overflow:hidden;
+}
+
+.portfolio-item-picture:hover .portfolio-text-wrap {
+transform: translateY(0%);
+}
+
+.portfolio-img-text {
+    color: #F4F4FD;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 
 .portfolio-item-info {
@@ -325,7 +423,6 @@ address {font-style: normal;}
 
 .logo-colored-footer {
     color: #f4f4fd;
-    margin-bottom: 16px;
     display: inline-block;
 }
 
@@ -335,4 +432,34 @@ address {font-style: normal;}
     line-height: 1.5;
     letter-spacing: 0.02em;
     max-width: 264px;
+}
+
+.footer-socials-text {
+    color:  #FFF;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+}
+
+.socials-icon-link {
+    border-radius: 50%;
+    background-color: #4D5AE5;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.footer-icons-list {
+    display: flex;
+    gap: 16px;
+}
+
+.footer-container {
+    display: flex;
+    gap: 120px;
 }
