--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,7 @@ button {
 
 .header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 
 .header-logo {
@@ -146,10 +147,12 @@ address {font-style: normal;}
 .hero {
     padding: 188px 0;
     background-color: #2e2f42;
-    background-image: linear-gradient(#2E2F42B2, #2E2F42B2),
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
     url(../images/people-office\ 1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    max-width: 1440px;
+    background-position: center;
 }
 
 .hero-title {
@@ -179,6 +182,7 @@ address {font-style: normal;}
     min-width: 169px;
     height: 56px;
     margin: 0 auto;
+    transition зі значенням background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-service:hover,
@@ -197,6 +201,13 @@ address {font-style: normal;}
 .features {
     padding-top: 120px;
     padding-bottom: 120px;
+}
+
+.features-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
 }
 
 .visually-hidden {
@@ -312,6 +323,10 @@ address {font-style: normal;}
     margin-top: 8px;
 }
 
+.socials-icon {
+    fill: #f4f4fd;
+}
+
 .team-icon-link {
     display: flex;
     justify-content: center;
@@ -320,8 +335,7 @@ address {font-style: normal;}
     height: 100%;
     border-radius: 50%;
     background-color: #4D5AE5;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-icon-link:hover,
@@ -397,6 +411,10 @@ transform: translateY(0%);
     margin-bottom: 8px;
 }
 
+.portfolio-item-picture {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .portfolio-item-description {
     line-height: 1.5;
     font-size: 16px;
@@ -434,6 +452,10 @@ transform: translateY(0%);
     max-width: 264px;
 }
 
+.footer-logo-descr {
+    margin-right: 120px;
+}
+
 .footer-socials-text {
     color:  #FFF;
     font-size: 16px;
@@ -441,6 +463,11 @@ transform: translateY(0%);
     line-height: 1.5;
     letter-spacing: 0.02em;
     margin-bottom: 16px;
+}
+
+.socials-icon-link:hover,
+.socials-icon-link:focus {
+    background-color: #31D0AA;
 }
 
 .socials-icon-link {
@@ -451,6 +478,7 @@ transform: translateY(0%);
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -461,5 +489,5 @@ transform: translateY(0%);
 
 .footer-container {
     display: flex;
-    gap: 120px;
+    align-items: baseline;
 }
