--- a/css/styles.css
+++ b/css/styles.css
@@ -148,7 +148,7 @@ address {font-style: normal;}
     padding: 188px 0;
     background-color: #2e2f42;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-    url(../images/people-office\ 1.jpg);
+    url(../images/img-name.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     max-width: 1440px;
@@ -182,7 +182,7 @@ address {font-style: normal;}
     min-width: 169px;
     height: 56px;
     margin: 0 auto;
-    transition зі значенням background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-service:hover,
@@ -203,7 +203,7 @@ address {font-style: normal;}
     padding-bottom: 120px;
 }
 
-.features-container {
+.icon-background {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -451,6 +451,7 @@ transform: translateY(0%);
     letter-spacing: 0.02em;
     max-width: 264px;
 }
+
 
 .footer-logo-descr {
     margin-right: 120px;
