--- a/css/styles.css
+++ b/css/styles.css
@@ -374,9 +374,7 @@ address {font-style: normal;}
     top: 0;
     background: #4D5AE5;
     height: 100%;
-    padding-top: 40px;
-    padding-right: 32px;
-    padding-left: 32px;
+    padding: 40px 32px;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -396,7 +394,7 @@ transform: translateY(0%);
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-    
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item-title {
@@ -408,8 +406,11 @@ transform: translateY(0%);
     margin-bottom: 8px;
 }
 
-.portfolio-item-picture {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+
+
+.portfolio-item-info:hover {
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 
