--- a/css/styles.css
+++ b/css/styles.css
@@ -388,13 +388,16 @@ overflow:hidden;
 transform: translateY(0%);
 }
 
-
+.portfolio-item-picture {
+    
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .portfolio-item-info {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 .portfolio-item-title {
@@ -408,8 +411,8 @@ transform: translateY(0%);
 
 
 
-.portfolio-item-info:hover {
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.portfolio-item-picture:hover {
+    
 box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
